# tiny_polyhedral_compiler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ISL_DESIGN.md  Makefile  README.md  lower.py  mkdocs.yml  pyproject.toml  test.py  test_crash.py  test_fusion.py  tools.sh
.github/workflows/: codegen_check.yaml  tests_on_push.yaml
autogen/: fix_catalog.py  generate_specs.py  get_specs.py
caten/: __init__.py  aff.py  dtype.py  helpers.py  ir.py  kernel.py  ops.py  render.py  runtime.py  simplifier.py  tensor.py  trace.py  viz.py
caten/isl/: __init__.py  context.py  ffi.py  func.py  mixin.py  obj.py  qualifier.py  registry.py
caten/polyhedral/: __init__.py  analysis.py  ast_visitor.py  band.py  codegen.py  context.py  converter.py  directive.py  domain.py  filter.py  mark.py  poly_schedule.py  schedule.py  schedule_tree.py  scop.py  sequence.py  stmt.py  transform.py  transformations.py  viz.py
caten/runtime/: cpu.py
caten/runtimes/: clang.py
caten_isl_ref/: function-specs.lisp  helpers.lisp  isl-binding.lisp  isl-function.lisp  isl-object.lisp  object-specs.lisp  package.lisp
docs/: IR_AND_DESIGN.md  ISL_APIS.md  ISL_MANUAL.html  ISL_missing_apis.md  POLYHEDRAL_SPEC.md  PROJECT.md  SPECS.md  get_specs.py  index.md
examples/: Introduction2Tensor.ipynb  conv2d_pool2d_fusion.py  conv2d_pool2d_fusion_advanced.py  conv2d_pool2d_fusion_v2.py  directives.py  e2e_matmul.py  isl_tutorial.ipynb  matmul_cpu_optimization.ipynb  polyhedral_compiler.ipynb  schedule_tree.ipynb  verify_fusion.py
references/: CONVERSATION.txt  schedule.lisp
test/: test_control_flow.py  test_kernel.py  test_movements.py  test_pattern_matcher.py  test_shape.py
test/isl/: test_ast_callbacks.py  test_ast_expr_mixin.py  test_isl_aff.py  test_isl_ast_schedule_mat.py  test_isl_basic_map.py  test_isl_basic_set.py  test_isl_constraint.py  test_isl_context.py  test_isl_id.py  test_isl_map.py  test_isl_mat.py  test_isl_multi_val.py  test_isl_set.py  test_isl_space.py  test_isl_union_map.py  test_isl_union_pw_aff.py  test_isl_union_set.py  test_mixin.py
test/polyhedral/: test_analysis.py  test_compute_at.py  test_dsl.py  test_fusion.py  test_fusion_e2e.py  test_manual_fusion.py  test_transform.py  (+2 more)
tools/: fix_catalog.py  generate_specs.py
(+79 files in other folders)
