[project]
name = "caten-py"
version = "0.1.0"
description = "Polyhedral Compiler Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "Q"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "caten/isl/specs/*",
]

[tool.pytest.ini_options]
addopts = "--cov=caten --cov-report=term-missing --cov-fail-under=60"
testpaths = ["test"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
]
